# uac-ai-parser-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  check_sessions.py  docker-compose.yml  rebuild.sh  start.sh
agent/: Dockerfile  Makefile  go.mod  go.sum
agent/cmd/agent/: main.go
agent/internal/config/: config.go  tls.go
agent/internal/crypto/: crypto.go
agent/internal/sysinfo/: sysinfo.go
agent/internal/transport/: rest.go  ws.go
agent/internal/worker/: worker.go
backend/: README.md  config.py  fix_embeddings.py  gunicorn.conf.py  requirements.txt  run.py
backend/app/: __init__.py  websocket.py
backend/app/models/: __init__.py
backend/app/routes/: admin.py  agents.py  analyze.py  auth.py  chats.py  config.py  export.py  (+7 more)
database/: Dockerfile
database/init/: 002_schema.sql  003_seed_admin.sql  004_agents.sql  004_cascade_fks.sql  005_has_embeddings.sql  005_yara_rules.sql  006_rbac_and_playbooks.sql
docs/: how-to-use.md  mcp-server.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  style.css
mcp-server/: Dockerfile  pyproject.toml
mcp-server/uac_ai_mcp/: __init__.py  __main__.py  client.py  config.py  proxy.py  server.py
mcp-server/uac_ai_mcp/tools/: __init__.py  agents.py  analyze.py  auth.py  chats.py  config.py  entities.py  export.py  investigations.py  iocs.py  mitre.py  parse.py  resources.py  search.py  sessions.py  sheetstorm.py  timeline.py
(+101 files in other folders)
